add custom deploy command

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "deploy": "ng build --configuration production --base-href=\"https://borczeangelov.github.io/innovaspeak-mvp/\" && npx angular-cli-ghpages --dir=dist/innovaspeak-mvp/browser/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
