--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gh-pages": "^6.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "voximplant-websdk": "^4.6.3-2602",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
